<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CarRegistrationActivity">

    <TextView
        android:id="@+id/tvMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spMake"
        />

    <Spinner
        android:id="@+id/spMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvMake"
        />

    <EditText
        android:id="@+id/etModel"
        android:hint="@string/enter_the_model"
        app:layout_constraintTop_toBottomOf="@+id/tvMake"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etYear"
        app:layout_constraintTop_toBottomOf="@id/etModel"
        android:layout_margin="5dp"
        android:hint="@string/enter_year"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spColor"
        />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etYear"
        app:layout_constraintStart_toEndOf="@id/tvColor"
        />

    <TextView
        android:id="@+id/tvTransmission"
        app:layout_constraintTop_toBottomOf="@id/tvColor"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/transmission"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTransmission"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbAutomatic"
            android:text="@string/automatic"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbManual"
            android:text="@string/manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <EditText
        android:id="@+id/etEngineSize"
        app:layout_constraintTop_toBottomOf="@+id/radio"
        android:layout_margin="8dp"
        android:hint="@string/enter_engine_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
    android:id="@+id/btnRestart"
    app:layout_constraintTop_toBottomOf="@id/etEngineSize"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="8dp"
    android:text="@string/restart"
    android:onClick="restart"
    android:textColor="@color/red"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@id/etEngineSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textColor="@color/green"
        android:text="@string/submit"
        android:onClick="submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</android.support.constraint.ConstraintLayout>